final deploy on server